--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,5 @@ before_install:
 - pod install --project-directory=Example
 
 script:
-- set -o pipefail && xcodebuild test -workspace Example/LctvSwift.xcworkspace -scheme LctvSwift-Example -sdk iphonesimulator9.2 ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild test -workspace Example/LctvSwift.xcworkspace -scheme LctvSwift-Example ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
