--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ xcode_scheme: LctvSwift-Example
 # cache: cocoapods
 podfile: Example/Podfile
 before_install:
-- gem install cocoapods # Since Travis is not always on latest version
-- pod install --project-directory=Example
+#- gem install cocoapods # Since Travis is not always on latest version
+#- pod install --project-directory=Example
 
 script:
 - set -o pipefail && xcodebuild test -workspace Example/LctvSwift.xcworkspace -scheme LctvSwift-Example -destination "platform=iOS Simulator,name=iPhone 6" ONLY_ACTIVE_ARCH=NO | xcpretty
