--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,4 @@ before_install:
 
 script:
 - set -o pipefail && xcodebuild test -workspace Example/LctvSwift.xcworkspace -scheme LctvSwift-Example -destination "platform=iOS Simulator,name=iPhone 6" ONLY_ACTIVE_ARCH=NO | xcpretty
-- pod lib lint
+- pod lib lint --allow-warnings
