--- a/.travis.yml
+++ b/.travis.yml
@@ -10,15 +10,15 @@ branches:
 
 osx_image: xcode7.3
 xcode_sdk: iphonesimulator9.3
-xcode_project: Example/LctvSwift.xcodeproj
-xcode_scheme: LctvSwift-Example
+xcode_project: LctvSwift.xcodeproj
+xcode_scheme: "LctvSwift Tests iOS"
 
 # cache: cocoapods
-podfile: Example/Podfile
-before_install:
+#podfile: Example/Podfile
+#before_install:
 #- gem install cocoapods # Since Travis is not always on latest version
 #- pod install --project-directory=Example
 
 script:
-- set -o pipefail && xcodebuild test -workspace Example/LctvSwift.xcworkspace -scheme LctvSwift-Example -destination "platform=iOS Simulator,name=iPhone 6" ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild test -workspace LctvSwift.xcworkspace -scheme "LctvSwift Tests iOS" -destination "platform=iOS Simulator,name=iPhone 6" ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint --allow-warnings
