--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,5 @@ xcode_scheme: LctvSwift Tests iOS
 #- pod install --project-directory=Example
 
 script:
-- set -o pipefail && xcodebuild test -workspace LctvSwift.xcworkspace -scheme LctvSwift Tests iOS -destination "platform=iOS Simulator,name=iPhone 6" ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild test -workspace LctvSwift.xcworkspace -scheme "LctvSwift Tests iOS" -destination "platform=iOS Simulator,name=iPhone 6" ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint --allow-warnings
