--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,6 @@ xcode_scheme: LctvSwift Tests iOS
 #- pod install --project-directory=Example
 
 script:
+- xcodebuild -list
 - set -o pipefail && xcodebuild test -workspace LctvSwift.xcworkspace -scheme "LctvSwift Tests iOS" -destination "platform=iOS Simulator,name=iPhone 6" ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint --allow-warnings
